--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,8 @@
 
 	/* Size constants. */
 	--width: 750px;
+	--margin-top-bottom: 10px;
+	--margin-side: 15px;
 	--socials-size: 16px;
 }
 
